Add dracula theme

--- a/journals/2021_03_16.md
+++ b/journals/2021_03_16.md
@@ -2,4 +2,5 @@
 title: Mar 16th, 2021
 ---
 
-## Initializing new repo for OmniZya Project, I just want to test logseq to see what it offer.
+## Initializing new OmniZya Repo
+I have just descoverd logseq, still don't know what is it. I'll give it a try, then I'll decide what to do with.
